RG-1646 fix icon vertical align

--- a/components/icon/icon.css
+++ b/components/icon/icon.css
@@ -9,7 +9,8 @@
   fill: currentColor;
 }
 
-.glyph > svg {
+.glyph,
+.glyphIconNg > svg {
   display: inline-block;
 
   vertical-align: middle;
